# splunk-add-on-for-cef

./: .appinspect.manualcheck.yaml  .fossa.yml  .gitmodules  .pytest.expect  .splunkbase  Dockerfile-splunk  Dockerfile-tests  docker-compose-ci.yml  docker-compose.yml  pyproject.toml  renovate.json  requirements_addon_specific.txt  requirements_broken.txt  requirements_dev.txt  requirements_py2_dev.txt
.circleci/: config.yml
.github/workflows/: .ci-metadata.json  build-test-release.yml  release-notes.yml
.reuse/: dep5
package/: app.manifest
package/default/: app.conf  fields.conf  props.conf  transforms.conf
tests/: entrypoint.sh  requirements.txt
tests/data/: pytest-splunk-addon-data.conf
tests/data/samples/: cef_syslog.sample
tests/knowledge/: pytest-splunk-addon-data.conf
tests/knowledge/samples/: cef_syslog.sample
