##
## SPDX-FileCopyrightText: 2021 Splunk, Inc. <sales@splunk.com>
## SPDX-License-Identifier: LicenseRef-Splunk-8-2021
##
##
[tool.poetry]
name = "splunk-add-on-for-cef"
version = "0.1.0"
description = ""
authors = ["Splunk Inc, <sales@splunk.com>"]
license = "Splunk-1-2020"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
lovely-pytest-docker = "0.3.1"
pytest-expect = "1.1.0"
pytest-rerunfailures = "12.0"
splunk-packaging-toolkit = "1.0.1"
pytest-splunk-addon = "5.1.0"
splunk-add-on-ucc-framework = "5.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
